<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical">

    <include
        android:id="@+id/includeToolbar"
        layout="@layout/app_toolbar" />

    <RelativeLayout
        android:id="@+id/packInfoView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/includeToolbar"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="8dp"
        android:paddingVertical="8dp">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/stickerTrayImage"
            android:layout_width="42dp"
            android:layout_height="42dp"
            android:layout_centerVertical="true"
            android:layout_marginEnd="10dp"
            android:contentDescription="@string/tray_image_content_description"
            android:scaleType="centerCrop"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/stickerPackName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/stickerTrayImage"
            android:fontFamily="@font/roboto_medium"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            tools:text="Pack Name" />

        <TextView
            android:id="@+id/stickerAuthor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/stickerPackName"
            android:layout_marginTop="3dp"
            android:layout_toEndOf="@+id/stickerTrayImage"
            android:alpha="0.5"
            android:fontFamily="@font/roboto_regular"
            android:textColor="@android:color/black"
            tools:text="Author" />

        <RelativeLayout
            android:id="@+id/addNewStickersToPack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:background="?attr/selectableItemBackground"
            android:visibility="gone"
            tools:visibility="visible">

            <ImageView
                android:id="@+id/plus_icon_add_sticker"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_centerVertical="true"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:contentDescription="@string/add_button_content_description"
                android:scaleType="center"
                app:tint="@color/colorAccent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginEnd="16dp"
                android:layout_toEndOf="@id/plus_icon_add_sticker"
                android:text="@string/add_sticker"
                android:textColor="@color/colorAccent"
                android:textSize="17sp" />

        </RelativeLayout>

    </RelativeLayout>

    <View
        android:id="@+id/viewDivider"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_3sdp"
        android:layout_below="@+id/packInfoView"
        android:background="@color/lighter_gray" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/stickersList"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/bottomContainer"
        android:layout_below="@+id/viewDivider"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginBottom="@dimen/_5sdp"
        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
        app:spanCount="3" />


    <FrameLayout
        android:id="@+id/bottomContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginHorizontal="@dimen/_10sdp"
        android:layout_marginBottom="@dimen/_10sdp">

        <TextView
            android:id="@+id/btnAddToWhatsApp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_btn_green"
            android:fontFamily="@font/roboto_regular"
            android:gravity="center"
            android:paddingVertical="@dimen/_8sdp"
            android:text="@string/add_to_whatsapp"
            android:textColor="@android:color/white"
            android:textSize="@dimen/_13ssp" />

        <TextView
            android:id="@+id/viewAlreadyAdded"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingVertical="@dimen/_8sdp"
            android:text="@string/details_pack_already_added"
            android:textColor="@android:color/black"
            android:textSize="@dimen/_13ssp"
            android:visibility="gone"
            tools:visibility="gone" />
    </FrameLayout>

</RelativeLayout>
