<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@android:color/white"
        app:cardCornerRadius="0dp"
        app:cardElevation="5dp">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:navigationIcon="@drawable/icon_back"
            tools:title="@string/app_name" />

    </androidx.cardview.widget.CardView>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:paddingVertical="8dp">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/tray_image"
            android:layout_width="42dp"
            android:layout_height="42dp"
            android:layout_centerVertical="true"
            android:layout_marginEnd="10dp"
            android:contentDescription="@string/tray_image_content_description"
            android:scaleType="centerCrop"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/pack_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/tray_image"
            android:fontFamily="@font/roboto_medium"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            tools:text="Pack Name" />

        <TextView
            android:id="@+id/author"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/pack_name"
            android:layout_marginTop="3dp"
            android:layout_toEndOf="@+id/tray_image"
            android:alpha="0.5"
            android:fontFamily="@font/roboto_regular"
            android:textColor="@android:color/black"
            tools:text="Author" />

        <RelativeLayout
            android:id="@+id/add_sticker_to_pack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:background="?attr/selectableItemBackground">

            <ImageView
                android:id="@+id/plus_icon_add_sticker"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_centerVertical="true"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:contentDescription="@string/add_button_content_description"
                android:scaleType="center"
                android:src="@drawable/sticker_3rdparty_add"
                app:tint="@color/colorAccent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginEnd="16dp"
                android:layout_toEndOf="@id/plus_icon_add_sticker"
                android:text="Add Sticker"
                android:textColor="@color/colorAccent"
                android:textSize="17sp" />

        </RelativeLayout>


    </RelativeLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        android:layout_weight="1">

        <com.omys.stickermaker.WhatsAppBasedCode.BottomFadingRecyclerView
            android:id="@+id/sticker_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clipToPadding="false"
            android:fadingEdgeLength="@dimen/fading_edge_length"
            android:layout_marginHorizontal="10dp"
            android:requiresFadingEdge="vertical" />

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:alpha="0.1"
            android:background="#000000"
            android:visibility="invisible"
            tools:visibility="visible" />

    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_marginHorizontal="10dp"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true">

        <FrameLayout
            android:id="@+id/share_pack_button"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_gravity="bottom"
            android:layout_weight="1"
            android:background="@drawable/btn_blue"
            android:clickable="true"
            android:layout_marginEnd="5dp"
            android:focusable="true">

            <TextView
                style="@style/StickerPreviewButtonText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@android:color/transparent"
                android:clickable="false"
                android:drawableStart="@android:drawable/ic_menu_share"
                android:drawableLeft="@android:drawable/ic_menu_share"
                android:drawablePadding="8dp"
                android:drawableTint="@android:color/white"
                android:focusable="false"
                android:foreground="@android:color/transparent"
                android:text="@string/share_pack" />
        </FrameLayout>

        <FrameLayout
            android:id="@+id/delete_pack_button"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_gravity="bottom"
            android:layout_marginStart="5dp"
            android:layout_weight="1"
            android:background="@drawable/btn_red"
            android:clickable="true"
            android:focusable="true">

            <TextView
                style="@style/StickerPreviewButtonText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@android:color/transparent"
                android:clickable="false"
                android:drawableStart="@android:drawable/ic_menu_delete"
                android:drawableLeft="@android:drawable/ic_menu_delete"
                android:drawablePadding="8dp"
                android:drawableTint="@android:color/white"
                android:focusable="false"
                android:foreground="@android:color/transparent"
                android:text="@string/delete_pack" />
        </FrameLayout>

    </LinearLayout>


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginHorizontal="10dp"
        android:layout_marginBottom="5dp">

        <TextView
            android:id="@+id/already_added_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/details_pack_already_added"
            android:textColor="#9B9B9B"
            android:textSize="14sp"
            android:visibility="gone"
            tools:visibility="visible" />

        <FrameLayout
            android:id="@+id/add_to_whatsapp_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:background="@drawable/btn_green"
            android:clickable="true"
            android:focusable="true">

            <TextView
                style="@style/StickerPreviewButtonText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@android:color/transparent"
                android:clickable="false"
                android:drawableStart="@drawable/sticker_3rdparty_wa"
                android:drawableLeft="@drawable/sticker_3rdparty_wa"
                android:drawablePadding="8dp"
                android:focusable="false"
                android:foreground="@android:color/transparent"
                android:text="@string/add_to_whatsapp" />
        </FrameLayout>

    </FrameLayout>

    <!--  <FrameLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginTop="10dp"
          >
          <com.google.android.gms.ads.AdView
              xmlns:ads="http://schemas.android.com/apk/res-auto"
              android:id="@+id/adView"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_gravity="bottom|center_horizontal"
              ads:adSize="BANNER"
              ads:adUnitId="@string/admob_banner_packview_unit_id">
          </com.google.android.gms.ads.AdView>
      </FrameLayout>-->
</LinearLayout>
